# DESKTOP-TUI

./: .clang-format  .clang-tidy  .claudeignore  .gitattributes  .gitignore  .gitmessage  AUDITORIA_CALIDAD_DETALLADA.md  AUDITORIA_COMPLETA_V0.3.0.md  BRAINSTORM_CONSOLIDADO_v0.3.0.md  BRAINSTORM_ROADMAP_V1.md  CHANGELOG.md  CHANGELOG_SECURITY_FIXES.md  CLAUDE.md  CMakeLists.txt  CODE_QUALITY_AUDIT.md  Doxyfile  FASE1_COMPLETION_REPORT.md  HORIZON1_GETTING_STARTED.md  IDEATION_SESSION_2026.md  P1-01_IMPLEMENTATION_REPORT.md  P1-02_IMPLEMENTATION_REPORT.md  PLAN_FASE1_SEGURIDAD.md  RAW_POINTERS_ANALYSIS.md  README.md  REFACTOR_CONSTANTS_CLEANUP.md  ROADMAP_IDEAS.md  audit_calidad_detallada_2026_04_18.md  brainstorming_next_steps.md
.claude-flow/agents/: store.json
.claude-flow/daa/: store.json
.claude-flow/github/: store.json
.claude-flow/swarm/: swarm-state.json
.github/workflows/: ci.yml
.qwen/reviews/: 2026-04-14-003500-full-audit.md  2026-04-14-031108-full-audit.md  2026-04-14-140000-full-audit.md
apps/: README.md  demo_hello.cpp  demo_multiwindow.cpp
audit/: CODE_QUALITY_AUDIT.md  CODE_QUALITY_AUDIT_v0.3.0.md  HEADER_AUDIT_REPORT.md  HEADER_AUDIT_SUMMARY.md
build-asan/: desktop-tui  plugin_demo
build-phase1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  desktop-tui  plugin_demo
build-phase1/Testing/Temporary/: CTestCostData.txt
build-phase1/tests/: CTestTestfile.cmake  Makefile  benchmark  cmake_install.cmake  test_all
build-sanitize/: CTestTestfile.cmake
build-sanitize/tests/: CTestTestfile.cmake  benchmark
build-sanitizer/: CMakeCache.txt  Makefile  cmake_install.cmake  desktop-tui  plugin_demo
build-sanitizers/: desktop-tui  plugin_demo
docs/: CODE_STYLE.md  CONTRIBUTING.md  DOC-01_COMPLETION_REPORT.md  IMPLEMENTACION_PORTABILIDAD.md  RESUMEN_TORMENTA_IDEAS.md
docs/android_termux/: IMPLEMENTACION_COMPLETA.md  OPTIMIZACIONES_TERMUX.md  README_TERMUX.md
docs/html/: README_8md.html  annotated.html  annotated_dup.js  border_8hpp.html  border_8hpp.js  border_8hpp_source.html  classTUIShell-members.html  classTUIShell.html  classTUIShell.js  classdesktop__tui_1_1DynamicPlugin-members.html  classdesktop__tui_1_1DynamicPlugin.html  classdesktop__tui_1_1DynamicPlugin.js  classdesktop__tui_1_1IPlugin-members.html  classdesktop__tui_1_1IPlugin.html  classdesktop__tui_1_1IPlugin.js  classdesktop__tui_1_1PluginContext-members.html  classdesktop__tui_1_1PluginContext.html  classdesktop__tui_1_1PluginContext.js  classdesktop__tui_1_1PluginContextImpl-members.html  classdesktop__tui_1_1PluginContextImpl.html  classdesktop__tui_1_1PluginContextImpl.js  classdesktop__tui_1_1PluginManager-members.html  classdesktop__tui_1_1PluginManager.html  classdesktop__tui_1_1PluginManager.js  classes.html  classtui_1_1Border-members.html  classtui_1_1Border.html  classtui_1_1Border.js  classtui_1_1Clipboard-members.html  classtui_1_1Clipboard.html  classtui_1_1Clipboard.js  classtui_1_1ClipboardImpl-members.html  classtui_1_1ClipboardImpl.html  classtui_1_1ClipboardImpl.js  classtui_1_1Desktop-members.html  classtui_1_1Desktop.html  classtui_1_1Desktop.js  classtui_1_1DesktopManager-members.html  classtui_1_1DesktopManager.html  classtui_1_1DesktopManager.js  (+303 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+89 more)
docs/issues/: ISSUE_001_CAPABILITY_DETECTOR.md  ISSUE_002_BRAILLE_RENDERER.md  ISSUE_003_ANDROID_NDK_BACKEND.md
docs/superpowers/plans/: 2026-04-15-critical-bugfixes-plan.md  2026-04-15-fase1-critical-security-fixes.md
docs/tasks/: SEC-01-sanitizers-completed.md
examples/: text_input_demo.cpp
examples/plugins/: demo_plugins.cpp  greeting_plugin.cpp  hello_world_plugin.cpp
include/: tui.hpp  version.hpp.in
include/core/: capability_detector.hpp  colors.hpp  common.hpp  config.hpp  event.hpp  logger.hpp  rect.hpp  signal.hpp  string_utils.hpp  theme.hpp
include/desktop/: desktop_manager.hpp
include/platform/: input.hpp  terminal.hpp
include/plugins/: plugin_interface.hpp
include/ui/: border.hpp  context_menu.hpp  label.hpp  list.hpp  renderer.hpp  text_input.hpp  widget.hpp
include/window/: window.hpp
roadmap/: HORIZON1_IMPLEMENTATION_CHECKLIST.md  horizon1_github_issues.md  horizon1_stabilization_plan.md
scripts/: setup_dev_env.sh  setup_termux.sh  test_sanitizers.sh
src/: main.cpp
src/core/: capability_detector.cpp  colors.hpp  event.hpp  logger.hpp  rect.hpp  signal.hpp  string_utils.hpp  theme.cpp
src/desktop/: desktop.cpp  desktop.hpp  desktop_manager.cpp  desktop_manager.hpp
src/platform/: input.hpp  input_android.cpp  input_generic.cpp  input_posix.cpp  input_win.cpp  terminal.hpp  terminal_android.cpp  terminal_generic.cpp  terminal_posix.cpp  terminal_win.cpp
src/plugins/: capability_detector.cpp  dynamic_plugin.cpp  plugin_manager.cpp  plugin_manager.hpp
src/ui/: braille_renderer.cpp  braille_renderer.h  label.hpp  list.hpp  panel.cpp  panel.hpp  renderer.cpp  renderer.hpp  text_input.cpp  text_input.hpp  widget.hpp
src/window/: window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
tests/: CMakeLists.txt  benchmark.cpp  test_braille_renderer.cpp  test_capability_detector.cpp  test_colors.cpp  test_critical_fixes.cpp  test_desktop_manager.cpp  test_event.cpp  test_framework.hpp  test_integration.cpp  test_main.cpp  test_rect.cpp  test_rect_safety.cpp  test_renderer.cpp  test_signal.cpp  test_string_utils.cpp  test_thread_safety.cpp  test_widgets.cpp
